--- a/smart-calendar/src/styles.scss
+++ b/smart-calendar/src/styles.scss
@@ -1,7 +1,7 @@
 
 
 body {
-  color-scheme: dark;
+  color-scheme: light dark;
 
   // Set a default background, font and text colors for the application using
   // Angular Material's system-level CSS variables. Learn more about these
